--- a/massadmin/templates/admin/includes/mass_fieldset.html
+++ b/massadmin/templates/admin/includes/mass_fieldset.html
@@ -3,11 +3,11 @@
 <fieldset class="grp-module module {{ fieldset.classes }}">
   {% if fieldset.name %}<h2 class="grp-collapse-handler">{{ fieldset.name }} Mass Edit</h2>{% endif %}
   {% if fieldset.description %}<div class="grp-row row"><p class="grp-description">{{ fieldset.description|safe }}</p></div>{% endif %}
-  
+
   {% if general_error %}
     <div class="grp-errors errornote"> {{ general_error}} </div>
   {% endif %}
-  
+
   <table>
     <tr>
       <th>
@@ -25,19 +25,19 @@
           </td>
         </tr>
       {% endif %}
-      
+
       {% for field in line %}
         <tr>
           {% if field.field.name in adminform.readonly_fields %}
             <td>
-              
+
             </td>
             <td>
               {{ field.field.name }} {% trans "is read only." %}
             </td>
           {% else %}{% if field.field.name in unique_fields %}
             <td>
-              
+
             </td>
             <td>
               {{ field.field.name }} {% trans "is unique." %}
@@ -49,7 +49,8 @@
             </td>
             <td class="form-row field-{{ field.field.name }}">
               {% if field.is_checkbox %}
-                {{ field.field }}{{ field.label_tag }}
+                <div>{{ field.field }}</div>
+                <div>{{ field.label_tag }}</div>
               {% else %}
                 <div>
                   {{ field.label_tag }}
