--- a/massadmin/templates/admin/includes/mass_fieldset.html
+++ b/massadmin/templates/admin/includes/mass_fieldset.html
@@ -11,7 +11,7 @@
   <table>
     <tr>
       <th>
-        {% trans "Mass Update?" %}
+        {% trans "Update?" %}
       </th>
       <th>
         {% trans "Field" %}
@@ -50,10 +50,10 @@
             <td class="form-row field-{{ field.field.name }}">
               {% if field.is_checkbox %}
                 <div>{{ field.field }}</div>
-                <div>{{ field.label_tag }}</div>
+                <div>&nbsp;{{ field.label_tag }}</div>
               {% else %}
                 <div>
-                  {{ field.label_tag }}
+                  {{ field.label_tag }}&nbsp;
                 </div>
                 <div>
                   {{ field.field }}
